--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: "Gabriel Elmo L. Angeles"
-description: "My 7OOP Lab Task Portfolio - BSCS C204"
+description: "My 7OOP Lab Task - BSCS C204"
