--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: "Gabriel Elmo L. Angeles"
+title: "Angeles, Gabriel Elmo"
 description: "My 7OOP Lab Task - BSCS C204"
